--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ node_modules/
 /.svn/
 /mprcontents/mprjournal*
 TRIMM_DesignSystem.mpr
-.mendix-cache/base_data/mprcontents/7b/22/7b22940f-b2dd-43e1-9a0b-25011a7e1b33.mxunit
+.mendix-cache/base_data/
